# ReadLog-ia

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
shared/types/: analysis.types.ts  index.ts  ipc.types.ts  log.types.ts  parser.types.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/core/parsers/: index.ts
src-tauri/core/parsers/base/: BaseLogParser.ts  ParserFactory.ts  index.ts
src-tauri/core/parsers/implementations/: ZlgParser.ts  index.ts
src-tauri/core/parsers/parsers/: index.ts
src-tauri/core/parsers/utils/: ParserUtils.ts  index.ts
src-tauri/src/: commands.rs  main.rs
src/styles/: index.css
