[package]
name = "log-analyzer"
version = "0.1.0"
description = "Ferramenta desktop para análise de logs"
authors = ["Seu Nome"]
license = ""
repository = ""
edition = "2021"

# Melhor performance em builds de produção
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-hide", "window-unmaximize", "window-maximize", "fs-read-dir", "fs-exists", "window-minimize", "fs-create-dir", "window-unminimize", "window-start-dragging", "window-close", "window-show", "dialog-open", "dialog-save", "fs-read-file", "fs-write-file", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
